<resources>
    <string name="app_name">Trip Manager</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="add_trip">Add trip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip_name">Trip name</string>
    <string name="please_enter_trip_name">Please enter trip name</string>
    <string name="please_select_at_least_one_member">Please select atleast one member</string>
    <string name="add_member">Add member</string>
    <string name="please_enter_the_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="member">Members</string>
    <string name="essentials">Essentials</string>
    <string name="add_essentials">Add essentials</string>
    <string name="add_your_essentials_here">Add your essentials here</string>
    <string name="essential_name">Essential name</string>
    <string name="responsible_person">Responsible person</string>
    <string name="please_enter_essential_name">Please enter essential name</string>
    <string name="please_enter_the_name_of_responsible_person">Please enter the name of responsible person</string>
    <string name="trip_members_will_show_here">Trip members will show here</string>
    <string name="balance">Balance: %s ₹</string>
    <string name="transaction_name">Transaction name</string>
    <string name="transaction_description">Transaction description</string>
    <string name="amount">Amount</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="please_enter_transaction_name">Please enter transaction name</string>
    <string name="please_enter_the_amount">Please enter valid amount</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="please_wait">Please wait…</string>
    <string name="user_image">User Image</string>
    <string name="hii_name">Hii %s</string>
    <string name="add_your_trip">Add your trip</string>
    <string name="start_date_of_trip">Start date of trip</string>
    <string name="_minutes">%d minute(s)</string>
    <string name="_hour">%d hour(s)</string>
    <string name="_hour_minutes">%d hour(s) %d minute(s) </string>
    <string name="end_date_of_trip">End date of the trip</string>
    <string name="select_members">Select members</string>
    <string name="add">Add</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="current_trips">Current trips</string>
    <string name="_members"> (%d members)</string>
    <string name="upcoming_trips">Upcoming trips</string>
    <string name="past_trips">Past trips</string>
    <string name="trip">Trip</string>
    <string name="not_handled_yet">Not handled yet</string>
    <string name="select_member">Select member</string>
    <string name="please_select_start_date">Please select start date</string>
    <string name="please_select_end_date">Please select end date</string>
    <string name="handled_by">Handled by</string>
    <string name="handled">Handled</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="please_tell_you_handled_it">Please tell who handled it</string>
    <string name="add_money">Add money</string>
    <string name="add_expense">Add expense</string>
    <string name="yes">Yes</string>
    <string name="please_confirm_logout">Please confirm that you want to log out?</string>
    <string name="trips_will_show_here">Your trips will show here</string>
    <string name="this_email_already_exists">This email already exists</string>
    <string name="are_you_sure_you_want_to_delete_this_essential">Are you sure you want to delete this essential?</string>
    <string name="save_this_transaction">Save this transaction?</string>
    <string name="transactions">Transactions</string>
    <string name="all_your_transactions_will_be_here">All your transactions will be here</string>
</resources>