<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="transactionTypes"
            type="com.trip.manager.utils.TransactionType" />

        <variable
            name="transaction"
            type="com.trip.manager.ui.trip.model.Transaction" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rounded_background"
        tools:context=".ui.trip.view.AddTransactionFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:paddingHorizontal="@dimen/_15sdp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/back_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/done_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/transaction_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:background="@drawable/white_rounded_background"
            android:elevation="10dp"
            android:hint="@string/transaction_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/_12sdp"
            android:text="@={transaction.title}"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/transaction_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/white_rounded_background"
            android:elevation="10dp"
            android:hint="@string/transaction_description"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:padding="@dimen/_12sdp"
            android:text="@={transaction.description}"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/transaction_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/white_rounded_background"
            android:elevation="10dp"
            android:hint="@string/amount"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="@dimen/_12sdp"
            android:text="@={transaction.amount}"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/transaction_description" />

        <RadioGroup
            android:id="@+id/transaction_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/amount">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@{transaction.type.equals(transactionTypes.getCredit())}"
                android:onClick="@{()->transaction.setType(transactionTypes.getCredit())}"
                android:text="@string/credit" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@{transaction.type.equals(transactionTypes.getDebit())}"
                android:onClick="@{()->transaction.setType(transactionTypes.getDebit())}"
                android:text="@string/debit" />

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transaction_type" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>